# context-engine

./: .gitignore  Package.swift  README.md  pyproject.toml
Sources/ContextAgent/: main.swift
context_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
context_engine/observer/: base.py  macos.py  macos_ax.py
context_engine/runtime/: anchor_extractor.py  cognitive_session.py  cognitive_state.py  episode.py  event_bus.py  events.py  goal_continuity.py  intent_binder.py  intent_listener.py  intent_resolver.py  loop_detector.py  reentry_classifier.py  run_runtime.py  semantic_memory.py  session_builder.py  sessionizer.py  stream.py
context_engine/state/: event.py
scripts/: run_observer.py  run_runtime.py
